# sniff-check

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  biome.json  install.js  package.json  preinstall.js  sniff.toml
.github/workflows/: release.yml
src/: analyzers.rs  config.rs  lib.rs  main.rs  utils.rs
src/commands/: bundle.rs  components.rs  context.rs  deploy.rs  env.rs  imports.rs  large.rs  memory.rs  menu.rs  mod.rs  perf.rs  types.rs
src/commands/imports_analyzer/: mod.rs  parser.rs  reporter.rs  resolver.rs  types.rs  validation.rs
src/common/: cli_args.rs  error_handler.rs  file_scanner.rs  json_output.rs  mod.rs  output_utils.rs  performance.rs  progress.rs  regex_patterns.rs  report_formatter.rs
tests/: context_tests.rs  imports_command_tests.rs  large_command_tests.rs  types_command_tests.rs
tests/common/: mod.rs
